--- a/example.env
+++ b/example.env
@@ -4,3 +4,4 @@ ZONE_ID="YOUR_CLOUDFLARE_ZONE_ID"
 API_TOKEN="YOUR_CLOUDFLARE_API_TOKEN"
 DOMAIN="YOUR_WEBSITE"   
 CRON_VALUE="0 0 * * *"
+CLOUDFLARE_ANAMES="dashy,api,identity"
